# pdftool

./: .gitignore  README.md  VERSION_NOTES.md  build.sh  main.py  pdftool.spec  pyproject.toml  requirements.txt
core/: document.py  drawing.py  fonts.py  history.py
core/commands/: __init__.py  annot.py  annot_text.py  group.py  image.py  page.py  text.py
tools/: _drawing_surgery.py  annotate.py  annotation_text.py  base.py  brush.py  image_insert.py  multi_select.py  rect_select.py  select.py  text_add.py  text_edit.py
ui/: canvas.py  compress_dialog.py  encrypt_dialog.py  mainwindow.py  properties_dialog.py  prune_dialog.py  resize_page_dialog.py  save_worker.py  settings_dialog.py  signature_dialog.py  sprite_icons.py  thumbnail_panel.py
